<resources>
    <string name="app_name">LanguageMap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="learned">Learned</string>
    <string name="unlearned">Unlearned</string>
    <string name="quiz">Quiz</string>
    <string name="answer">Please enter your answer</string>
    <string name="description">Please Translate the Word</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="word_quiz">Word Quiz</string>
    <string name="ask_gemini_ai">Ask Gemini AI</string>
    <string name="the_answer_will_shown_here">The answer will shown here</string>
    <string name="ask_gemini">Ask Gemini</string>
    <string name="learn">Learn</string>
    <string name="unlearn">Unlearn</string>
    <string name="please_go_and_learn_some_words">Please Go And Learn Some Words</string>
</resources>